[gd_scene load_steps=5 format=3 uid="uid://basgjhsppbohu"]

[ext_resource type="Script" uid="uid://bhp7t748tqf8s" path="res://node_2d.gd" id="1_0e48y"]
[ext_resource type="Texture2D" uid="uid://bdfarba5xjl78" path="res://imagens/silve-background.webp" id="2_0e48y"]
[ext_resource type="Texture2D" uid="uid://7c73wg7i2thj" path="res://imagens/Tela dos jogos.png" id="3_epypp"]
[ext_resource type="Texture2D" uid="uid://dthcc04xdc2hq" path="res://imagens/Unity.jpeg" id="4_0hol4"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0e48y")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576.5, 325)
scale = Vector2(1.8748, 1.87826)
texture = ExtResource("2_0e48y")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.5
offset_top = -66.5
offset_right = 27.5
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="jogo1" type="TextureButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_epypp")
texture_pressed = ExtResource("3_epypp")
texture_hover = ExtResource("3_epypp")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/jogo1"]
layout_mode = 0
offset_left = 64.5
offset_top = -25.5
offset_right = 129.5
offset_bottom = -2.5
text = "Fazenda"

[node name="jogo2" type="TextureButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("4_0hol4")
texture_pressed = ExtResource("4_0hol4")
texture_hover = ExtResource("4_0hol4")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/jogo2"]
offset_left = 64.5
offset_top = -25.5
offset_right = 129.5
offset_bottom = -2.5
text = "Unity"

[node name="jogo3" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "jogo3"
